syntax = "proto3";

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;  // no hashed pass
}

message RegisterResponse {
  string user_id = 1;
  string message = 2;
  bool success = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;     //  JWT token
  string user_id = 2;
  int64 expires_at = 3; // Unix timestamp
  bool success = 4;     // successfully or not
  string message = 5;   // Информационное сообщение
}

message LogoutRequest {
  string token = 1;     // JWT token
}

message LogoutResponse {
  bool success = 1;     // successfully or not
  string message = 2;
}