syntax = "proto3";

package github.com.samekb.messenger_app.auth_service;

import "proto/auth-service/messages.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "messenger-app/auth-service/pkg/api/auth;auth";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth Service";
    version: "1.0";
    contact: {
      name: "Semyon K.";
      url: "https://github.com/SamEkb";
      email: "sam.kilanoff@gmail.com";
    };
    license: {
      name: "Apache 2.0";
      url: "https://www.apache.org/licenses/LICENSE-2.0";
    };
  };
  external_docs: {
    url: "https://github.com/SamEkb/messenger-app";
    description: "Auth service for educational purpose";
  };
  schemes: HTTP;
  schemes: HTTPS;
};

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option(google.api.http) = {
      post: "/api/v1/auth/register"
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Register a new user";
      description: "Creates a new user account with the provided details.";
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option(google.api.http) = {
      post: "/api/v1/auth/login"
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Log in a user";
      description: "Authenticates a user with the provided email and password, returning a token.";
    };
  }

  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option(google.api.http) = {
      post: "/api/v1/auth/logout"
      body: "*"
    };

    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Log out a user";
      description: "Invalidates the provided user token to log out.";
    };
  }
}